tests/baselines/reference/decoratorOnFunctionDeclaration.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts(3,1): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    function F() {
    }